Fix break link button misalignment

--- a/css/index.css
+++ b/css/index.css
@@ -461,7 +461,7 @@ button:hover,
     border: 1.5px solid var(--border-color);
 
     /* transform-origin: 0 0; */
-    transform: scale(0.75) translate(0%, -20%);
+    transform: translate(-15%, -15%) scale(0.75);
     opacity: 0.4;
 }
 
